--- a/tasks/docker_install.yml
+++ b/tasks/docker_install.yml
@@ -8,12 +8,27 @@
     repo: deb https://download.docker.com/linux/ubuntu focal stable
     state: present
 
-- name: Update apt and install docker-ce
+- name: Update apt and install docker stuff
   apt:
-    name: docker-ce
+    name: 
+      - docker-ce
+      - docker-ce-cli 
+      - containerd.io 
+      - docker-compose-plugin
     state: latest
     update_cache: true
 
 - name: Install Docker Module for Python
   pip:
     name: docker
+
+- name: disallowing docker to manage ip tables
+  copy:
+    src: templates/daemon.json
+    dest: /etc/docker/daemon.json
+
+- name: adding existing user  to group docker
+  user:
+    name: user
+    groups: docker
+    append: yes
